--- a/cdk/package.json
+++ b/cdk/package.json
@@ -13,7 +13,7 @@
     "@types/node": "^20.4.1",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
-    "aws-cdk": "^2.69.0",
+    "aws-cdk": "2.77.0",
     "esbuild": "^0.18.11",
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
