feat: centralise frontend and have multi-region backend

--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.369.0",
+    "@aws-sdk/client-ssm": "^3.370.0",
     "@aws-sdk/lib-dynamodb": "^3.369.0"
   }
 }
