--- a/src/app/package.json
+++ b/src/app/package.json
@@ -14,6 +14,7 @@
     "aws-amplify": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
